--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,10 @@
+.calculator-container{
+  border: 6px solid lightskyblue;
+  border-radius: 10px;
+}
 .calculator {
   max-width: 400px;
-  margin: 50px auto;
+  margin: auto;
 }
 
 .display {
@@ -18,14 +22,9 @@
   color: #555;
 }
 
-.buttons {
-  display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  grid-gap: 10px;
-}
-
 button {
   font-size: 1.2em;
-  padding: 10px;
+  padding: 25px;
+  margin:1px;
   cursor: pointer;
 }
